force-app/main/default/objects/Case/fields/Action_Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Template__c</fullName>
    <formula>CASE(
  TEXT( Trust_Type__c ),
  &quot;Pooled Trust II&quot;, &apos;0PRHu0000004tIWOAY&apos;,
  &quot;Private Trust I&quot;, &apos;0PRHu0000004tIXOAY&apos;,
  &quot;Private Trust II&quot;, &apos;0PRHu0000004tIbOAI&apos;,
  &quot;MSA&quot;, &quot;&quot;,
  NULL
)</formula>
    <label>Action Plan Template</label>
    <type>Text</type>
</CustomField>