force-app/main/default/objects/Case/fields/Additional_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Additional_Funding_Amount__c</fullName>
    <label>Additional Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>