force-app/main/default/objects/Case/fields/Address_Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>Address_Ext_Id__c</fullName>
    <externalId>true</externalId>
    <label>Address Ext Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>