force-app/main/default/objects/Case/fields/All_Enrollment_Packet_Received__c.field-meta.xml
<CustomField>
    <fullName>All_Enrollment_Packet_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to mark that you received all the document needed/required</inlineHelpText>
    <label>All Enrollment Packet Received?</label>
    <type>Checkbox</type>
</CustomField>