force-app/main/default/objects/Case/fields/Appendix_A__c.field-meta.xml
<CustomField>
    <fullName>Appendix_A__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appendix A</label>
    <type>Checkbox</type>
</CustomField>