force-app/main/default/objects/Case/fields/Arcare_Payee__c.field-meta.xml
<CustomField>
    <fullName>Arcare_Payee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arcare Payee</label>
    <type>Checkbox</type>
</CustomField>