force-app/main/default/objects/Case/fields/Attempt_Call__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Call__c</fullName>
    <label>Attempt Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Attempt_Call</valueSetName>
    </valueSet>
</CustomField>