force-app/main/default/objects/Case/fields/Auth_for_Exchange_of_Info__c.field-meta.xml
<CustomField>
    <fullName>Auth_for_Exchange_of_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auth for Exchange of Info</label>
    <type>Checkbox</type>
</CustomField>