force-app/main/default/objects/Case/fields/Bene_s_ID__c.field-meta.xml
<CustomField>
    <fullName>Bene_s_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bene&apos;s ID</label>
    <type>Checkbox</type>
</CustomField>