force-app/main/default/objects/Case/fields/Beneficiary_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_First_Name__c</fullName>
    <label>Beneficiary First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>