force-app/main/default/objects/Case/fields/Beneficiary_ID__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_ID__c</fullName>
    <formula>Beneficiary_Profile__r.PersonContact.Beneficiary_ID__c</formula>
    <inlineHelpText>This value will be populated automatically after the related Lead is converted into an Account (Beneficiary Profile).</inlineHelpText>
    <label>Beneficiary ID</label>
    <type>Text</type>
</CustomField>