force-app/main/default/objects/Case/fields/Beneficiary_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Last_Name__c</fullName>
    <label>Beneficiary Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>