force-app/main/default/objects/Case/fields/Beneficiary_Profile__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiary Profile</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>