force-app/main/default/objects/Case/fields/Benefit_Award_Letters__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Award_Letters__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Benefit Award Letters</label>
    <type>Checkbox</type>
</CustomField>