force-app/main/default/objects/Case/fields/CFPD_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>CFPD_Completed_By__c</fullName>
    <label>CFPD Completed By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>