force-app/main/default/objects/Case/fields/CFPD_Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CFPD_Completed_Date_Time__c</fullName>
    <label>CFPD Completed Date Time</label>
    <type>DateTime</type>
</CustomField>