force-app/main/default/objects/Case/fields/Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date_Time__c</fullName>
    <label>Completed Date Time</label>
    <type>DateTime</type>
</CustomField>