force-app/main/default/objects/Case/fields/Court_Approval__c.field-meta.xml
<CustomField>
    <fullName>Court_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Court Approval</label>
    <type>Checkbox</type>
</CustomField>