force-app/main/default/objects/Case/fields/Current_Status_Duration__c.field-meta.xml
<CustomField>
    <fullName>Current_Status_Duration__c</fullName>
    <formula>TEXT(Days_in_Current_Status__c) &amp; &quot; days since this onboarding is in the &quot; &amp; TEXT(Status) &amp; &quot; phase.&quot;</formula>
    <label>Current Status Duration</label>
    <type>Text</type>
</CustomField>