force-app/main/default/objects/Case/fields/Date_of_Enrollment_Packet_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Enrollment_Packet_Sent__c</fullName>
    <inlineHelpText>Enter the date when you sent the Joinder Agreement / Enrollment Packet</inlineHelpText>
    <label>Date of Enrollment Packet Sent</label>
    <type>Date</type>
</CustomField>