force-app/main/default/objects/Case/fields/Deposit_Posted__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Posted__c</fullName>
    <label>Deposit Posted</label>
    <type>Date</type>
</CustomField>