force-app/main/default/objects/Case/fields/Do_not_auto_send_Enrollment_Packet__c.field-meta.xml
<CustomField>
    <fullName>Do_not_auto_send_Enrollment_Packet__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to prevent the Enrollment Packet from being automatically sent when the Onboarding Status is &apos;Enrollment Packet Sent&apos;.</inlineHelpText>
    <label>Do not auto-send Enrollment Packet</label>
    <type>Checkbox</type>
</CustomField>