force-app/main/default/objects/Case/fields/Donor_s_Intent__c.field-meta.xml
<CustomField>
    <fullName>Donor_s_Intent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Donor&apos;s Intent</label>
    <type>Checkbox</type>
</CustomField>