force-app/main/default/objects/Case/fields/Email_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_1_Name__c</fullName>
    <label>Email #1 Name</label>
    <type>TextArea</type>
</CustomField>