force-app/main/default/objects/Case/fields/Email_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_2_Name__c</fullName>
    <label>Email #2 Name</label>
    <type>TextArea</type>
</CustomField>