force-app/main/default/objects/Case/fields/Email_3_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_3_Name__c</fullName>
    <label>Email #3 Name</label>
    <type>TextArea</type>
</CustomField>