force-app/main/default/objects/Case/fields/Enrollment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Fee__c</fullName>
    <label>Enrollment Fee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>250</fullName>
            </value>
            <value>
                <fullName>500</fullName>
            </value>
            <value>
                <fullName>750</fullName>
            </value>
            <value>
                <fullName>1000</fullName>
            </value>
            <value>
                <fullName>1250</fullName>
            </value>
            <value>
                <fullName>1500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>