force-app/main/default/objects/Case/fields/Enrollment_Pack_Received_Need_Review__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Pack_Received_Need_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enrollment Pack Received - Need Review</label>
    <type>Checkbox</type>
</CustomField>