force-app/main/default/objects/Case/fields/Enrollment_Packet_Received__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Packet_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check the box when you receive the Enrollment Packet.</inlineHelpText>
    <label>Enrollment Packet Received</label>
    <type>Checkbox</type>
</CustomField>