force-app/main/default/objects/Case/fields/Enter_to_TrueLink_now__c.field-meta.xml
<CustomField>
    <fullName>Enter_to_TrueLink_now__c</fullName>
    <inlineHelpText>Important: Selecting &quot;Yes&quot; and saving the record will initiate a sync for this onboarding with True Link.

Before syncing to True Link, ensure the Beneficiary Profile is created to populate the Beneficiary ID, which is required for onboarding.</inlineHelpText>
    <label>Enter to True Link now?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>