force-app/main/default/objects/Case/fields/Entered_in_True_Link__c.field-meta.xml
<CustomField>
    <fullName>Entered_in_True_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entered in True Link</label>
    <type>Checkbox</type>
</CustomField>