force-app/main/default/objects/Case/fields/Excess_Resources__c.field-meta.xml
<CustomField>
    <fullName>Excess_Resources__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excess Resources</label>
    <type>Checkbox</type>
</CustomField>