force-app/main/default/objects/Case/fields/Expect_Additional_Funding_Prior__c.field-meta.xml
<CustomField>
    <fullName>Expect_Additional_Funding_Prior__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Expect Additional Funding Prior to Enrollment Fee</inlineHelpText>
    <label>Expect Additional Funding Prior</label>
    <type>Checkbox</type>
</CustomField>