force-app/main/default/objects/Case/fields/Fee_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Fee_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fee Schedule</label>
    <type>Checkbox</type>
</CustomField>