force-app/main/default/objects/Case/fields/Food_Stamps__c.field-meta.xml
<CustomField>
    <fullName>Food_Stamps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Food Stamps</label>
    <type>Checkbox</type>
</CustomField>