force-app/main/default/objects/Case/fields/Food_Stamps_per_month__c.field-meta.xml
<CustomField>
    <fullName>Food_Stamps_per_month__c</fullName>
    <label>Food Stamps (per month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>