force-app/main/default/objects/Case/fields/From_Existing_Client__c.field-meta.xml
<CustomField>
    <fullName>From_Existing_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Existing Client</label>
    <type>Checkbox</type>
</CustomField>