force-app/main/default/objects/Case/fields/Funding__c.field-meta.xml
<CustomField>
    <fullName>Funding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Funding</label>
    <type>Checkbox</type>
</CustomField>