force-app/main/default/objects/Case/fields/Guardianship_Conservatorship__c.field-meta.xml
<CustomField>
    <fullName>Guardianship_Conservatorship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guardianship/Conservatorship</label>
    <type>Checkbox</type>
</CustomField>