force-app/main/default/objects/Case/fields/HCBS__c.field-meta.xml
<CustomField>
    <fullName>HCBS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HCBS</label>
    <type>Checkbox</type>
</CustomField>