force-app/main/default/objects/Case/fields/HUD_Section_8_Housing__c.field-meta.xml
<CustomField>
    <fullName>HUD_Section_8_Housing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HUD/Section 8 Housing</label>
    <type>Checkbox</type>
</CustomField>