force-app/main/default/objects/Case/fields/If_in_a_supervised_living_setting__c.field-meta.xml
<CustomField>
    <fullName>If_in_a_supervised_living_setting__c</fullName>
    <label>If in a supervised living setting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Staffed Apartment</fullName>
            </value>
            <value>
                <fullName>Group Home</fullName>
            </value>
            <value>
                <fullName>Nursing Home</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>