force-app/main/default/objects/Case/fields/Inheritance__c.field-meta.xml
<CustomField>
    <fullName>Inheritance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inheritance</label>
    <type>Checkbox</type>
</CustomField>