force-app/main/default/objects/Case/fields/Joinder__c.field-meta.xml
<CustomField>
    <fullName>Joinder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Joinder</label>
    <type>Checkbox</type>
</CustomField>