force-app/main/default/objects/Case/fields/Laura_Signed_Joinder__c.field-meta.xml
<CustomField>
    <fullName>Laura_Signed_Joinder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Laura Signed Joinder</label>
    <type>Checkbox</type>
</CustomField>