force-app/main/default/objects/Case/fields/Legal_Settlement__c.field-meta.xml
<CustomField>
    <fullName>Legal_Settlement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Settlement</label>
    <type>Checkbox</type>
</CustomField>