force-app/main/default/objects/Case/fields/Letter_to_Bene__c.field-meta.xml
<CustomField>
    <fullName>Letter_to_Bene__c</fullName>
    <label>Letter to Bene</label>
    <type>Date</type>
</CustomField>