force-app/main/default/objects/Case/fields/Living_Situation__c.field-meta.xml
<CustomField>
    <fullName>Living_Situation__c</fullName>
    <label>Living Situation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Independent</fullName>
            </value>
            <value>
                <fullName>Someone else&apos;s household</fullName>
            </value>
            <value>
                <fullName>Group care facility</fullName>
            </value>
            <value>
                <fullName>Skilled nursing facility</fullName>
            </value>
            <value>
                <fullName>Assisted living facility</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Institution, hospital, or nursing home</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Lives in a supervised living setting (24-hour supported care)</fullName>
                <isActive>false</isActive>
                <label>Lives in a supervised living setting (24-hour supported care)</label>
            </value>
            <value>
                <fullName>Lives in a supported living setting (&lt;24-hour supported care)</fullName>
                <isActive>false</isActive>
                <label>Lives in a supported living setting (&lt;24-hour supported care)</label>
            </value>
            <value>
                <fullName>Lives independently in own home or apartment</fullName>
                <isActive>false</isActive>
                <label>Lives independently in own home or apartment</label>
            </value>
            <value>
                <fullName>Lives with family</fullName>
                <isActive>false</isActive>
                <label>Lives with family</label>
            </value>
            <value>
                <fullName>Lives with foster family</fullName>
                <isActive>false</isActive>
                <label>Lives with foster family</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>