force-app/main/default/objects/Case/fields/Mail_Statement__c.field-meta.xml
<CustomField>
    <fullName>Mail_Statement__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check this box if the beneficiary prefers to receive the statement by mail.</inlineHelpText>
    <label>Mail Statement</label>
    <type>Checkbox</type>
</CustomField>