force-app/main/default/objects/Case/fields/Medicaid__c.field-meta.xml
<CustomField>
    <fullName>Medicaid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medicaid</label>
    <type>Checkbox</type>
</CustomField>