force-app/main/default/objects/Case/fields/Medical_Cards__c.field-meta.xml
<CustomField>
    <fullName>Medical_Cards__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Cards</label>
    <type>Checkbox</type>
</CustomField>