force-app/main/default/objects/Case/fields/Medicare__c.field-meta.xml
<CustomField>
    <fullName>Medicare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medicare</label>
    <type>Checkbox</type>
</CustomField>