force-app/main/default/objects/Case/fields/Notices_to_DCF__c.field-meta.xml
<CustomField>
    <fullName>Notices_to_DCF__c</fullName>
    <label>Notices to DCF</label>
    <type>Date</type>
</CustomField>