force-app/main/default/objects/Case/fields/Notices_to_SSA__c.field-meta.xml
<CustomField>
    <fullName>Notices_to_SSA__c</fullName>
    <label>Notices to SSA</label>
    <type>Date</type>
</CustomField>