force-app/main/default/objects/Case/fields/Onboarding_Pending_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Pending_Start_Date__c</fullName>
    <label>Onboarding Pending Start Date</label>
    <type>Date</type>
</CustomField>