force-app/main/default/objects/Case/fields/Other_Benefits_per_month__c.field-meta.xml
<CustomField>
    <fullName>Other_Benefits_per_month__c</fullName>
    <label>Other Benefits (per month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>