force-app/main/default/objects/Case/fields/PreneedPlan__c.field-meta.xml
<CustomField>
    <fullName>PreneedPlan__c</fullName>
    <label>Preneed Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>