force-app/main/default/objects/Case/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Profile</label>
    <type>Checkbox</type>
</CustomField>