force-app/main/default/objects/Case/fields/Provider_Other__c.field-meta.xml
<CustomField>
    <fullName>Provider_Other__c</fullName>
    <label>Provider - Other</label>
    <length>150</length>
    <type>Text</type>
</CustomField>